--- a/src/page-2.html
+++ b/src/page-2.html
@@ -17,12 +17,21 @@
     <main>
       <div class="container">
         <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 2
+          <span class="main-title-gradient">Что посмотреть с Владиком</span>
+<!--          to page 2-->
         </h1>
         <load src="./partials/back-link.html" />
+      </div>
+      <div id="app">
+        <ul class="js-movie-list movie-list"></ul>
+        <div class="button-container">
+          <button class="js-load-more load-more-hidden" type="button">Load More</button>
+        </div>
+        <div class="js-guard"></div>
       </div>
     </main>
 
     <load src="./partials/footer.html" />
   </body>
+<script src="./js/afisha.js" type="module"></script>
 </html>
