--- a/src/page-2.html
+++ b/src/page-2.html
@@ -29,9 +29,11 @@
         </div>
         <div class="js-guard"></div>
       </div>
+      <button class="scroll-top">↑</button>
     </main>
 
     <load src="./partials/footer.html" />
   </body>
+  <script src="./main.js"></script>
 <script src="./js/afisha.js" type="module"></script>
 </html>
