--- a/src/page-2.html
+++ b/src/page-2.html
@@ -34,6 +34,6 @@
 
     <load src="./partials/footer.html" />
   </body>
-  <script src="./main.js"></script>
+  <script src="./main.js" type="module"></script>
 <script src="./js/afisha.js" type="module"></script>
 </html>
